spacing fix

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ pre {
 }
 
 .page {
-	padding: 2% 10%;
+	padding: 3% 10%;
 }
 
 body {
@@ -59,6 +59,7 @@ h1 {
 .centered {
 	max-width: 100%;
 	flex: 1 1 50%;
+    margin: 1em 0;
 }
 
 .pt {
